# Projets-Etude

AR Tetris 3D/: Camera.cpp  Camera.h  ConstructeurPiece.cpp  ConstructeurPiece.h  ConstructeurPieceI.cpp  ConstructeurPieceI.h  ConstructeurPieceJ.cpp  ConstructeurPieceJ.h  ConstructeurPieceL.cpp  ConstructeurPieceL.h  ConstructeurPieceO.cpp  ConstructeurPieceO.h  ConstructeurPieceS.cpp  ConstructeurPieceS.h  ConstructeurPieceT.cpp  ConstructeurPieceT.h  ConstructeurPieceZ.cpp  ConstructeurPieceZ.h  Controleur.cpp  Controleur.h  Couleur.cpp  Couleur.h  FabriquePiece.cpp  FabriquePiece.h  FenetrePrincipal.cpp  FenetrePrincipal.h  GestionMarker.cpp  GestionMarker.h  Main.cpp  Marker.cpp  Marker.h  Objet.cpp  Objet.h  Piece.cpp  Piece.h  Scene.cpp  Scene.h  Sujet.h  TetrisFrame.cpp  TetrisFrame.h  (+6 more)
Algorithme Jointure BDD/: .classpath
Algorithme Jointure BDD/src/Interface/: Controleur.java  Observateur.java  Sujet.java  Window.java
Algorithme Jointure BDD/src/Jointure/: Cartesien.java  ConstructeurCartesien.java  ConstructeurHash.java  ConstructeurJointure.java  FabriqueJointure.java  Hash.java  Jointure.java  TypeCondition.java  TypeJointure.java
Algorithme Jointure BDD/src/Metier/: BDD.java  Bloc.java  BlocMemoire.java  BlocPhysique.java  Memoire.java  Modele.java  Table.java  TypeAttribut.java
Jeu Texte Metro/C++ WIP/: Story.xml
Jeu Texte Metro/C++ WIP/Metro/: Bestiaire.xml  Chapitre.cpp  Chapitre.h  Constructeur.cpp  Constructeur.h  Constructeur_Data.cpp  Constructeur_Data.h  Constructeur_DataEcranAccueil.cpp  Constructeur_DataEcranAccueil.h  Constructeur_DataEcranCombat.cpp  Constructeur_DataEcranCombat.h  Constructeur_DataEcranHistoire.cpp  Constructeur_DataEcranHistoire.h  Constructeur_DataObjet.cpp  Constructeur_DataObjet.h  Constructeur_Ecran.cpp  Constructeur_Ecran.h  Constructeur_EcranAccueil.cpp  Constructeur_EcranAccueil.h  Constructeur_EcranCombat.cpp  Constructeur_EcranCombat.h  Constructeur_EcranHistoire.cpp  Constructeur_EcranHistoire.h  Constructeur_Entite.cpp  Constructeur_Entite.h  Data.h  DataEcran.cpp  DataEcran.h  DataEcranAccueil.cpp  DataEcranAccueil.h  DataEcranCombat.cpp  DataEcranCombat.h  DataEcranHistoire.cpp  DataEcranHistoire.h  DataEntite.cpp  DataEntite.h  DataObjet.cpp  DataObjet.h  (+55 more)
Jeu Texte Metro/Pascal/: GestionEcran.dcu  GestionEcran.pas  MetroRPG.groupproj  MetroRPG.groupproj.local  Metro_jeu.dpr  Metro_jeu.dproj  Metro_jeu.dproj.local  Metro_jeu.identcache  Vite fait.odt  ennemi.dcu  ennemi.pas  gameplay_metro.dcu  gameplay_metro.pas  gestion_inventaire.dcu  gestion_inventaire.pas  histoire_texte.dcu  machaine.pas  montype.dcu  montype.pas  personnage.dcu  personnage.pas  save_chargement.dcu  save_chargement.pas  scenario.dcu  scenario.pas
Lancer de Rayon/: CMakeLists.txt
Lancer de Rayon/src/: Lancer.cpp  Lancer.h  Main.cpp
Lancer de Rayon/src/Camera/: Camera.cpp  Camera.h
Lancer de Rayon/src/Couleur/: Couleur.cpp  Couleur.h
Lancer de Rayon/src/Lumiere/: Lumiere.cpp  Lumiere.h
Lancer de Rayon/src/Materiel/: Materiel.cpp  Materiel.h
Lancer de Rayon/src/Object/: Object.cpp  Object.h
Lancer de Rayon/src/Object/Element/: Element.h  ElementPlan.cpp  ElementPlan.h  ElementSphere.cpp  ElementSphere.h
Lancer de Rayon/src/Object/Englobant/: Englobant.h  EnglobantPlan.cpp  EnglobantPlan.h  EnglobantSphere.cpp  EnglobantSphere.h
Lancer de Rayon/src/Rayon/: Rayon.cpp  Rayon.h
Lancer de Rayon/src/Scene/: Scene.cpp  Scene.h
Lancer de Rayon/src/Transformation/: Transform.cpp  Transform.h
Lancer de Rayon/src/Vecteur/: Vecteur.cpp  Vecteur.h
Lancer de Rayon/test/Rayon/: Rayon_Test.cpp
M2/MGSI/TPMarchingCube/: CMakeLists.txt
M2/MGSI/TPMarchingCube/src/: Arrete.h  Blob.h  Carreau.cpp  ConstructeurBlob.h  ConstructeurObject.h  Disk.h  FabriqueObject.cpp  Grille.cpp  Marching.h  Object.cpp  Scene.cpp  Scene.h  SceneControleur.cpp  SceneControleur.h  Vertices.cpp  Vertices.h
M2/MGSI/Tp FFD/: CMakeLists.txt  readme.txt
M2/MGSI/Tp FFD/bibliotheques/include/armadillo_bits/: config.hpp
M2/MGSI/Tp FFD/src/: BoundingBox.h  ConstructeurForme.cpp  ConstructeurObject.h  Forme.cpp  Forme.h  Object.h  Observateur.h  SceneControleur.h  Sujet.h  Vertices.cpp  Vertices.h
M2/PARV/TP Bonhomme de neige/: BonhommeDeNeige.code-workspace  CMakeLists.txt  readme.txt
M2/PARV/TP Bonhomme de neige/shader/: PhongShader.vert  basic.vert
M2/PARV/TP Bonhomme de neige/src/: BonhommeNeige.cpp  BonhommeNeige.h  FenetrePrincipal.cpp  MorceauBonhommeNeige.cpp  MorceauBonhommeNeige.h  Object.h  Scene.cpp  Scene.h  SceneControleur.cpp  Sphere.cpp  Sphere.h  Vertex.h  Vertices.cpp  Vertices.h
M2/PARV/Tp Inverse Cinematic/: CMakeLists.txt  Inverse Cinematic.code-workspace
M2/PARV/Tp Inverse Cinematic/bibliotheques/lib/: glfw3.lib
M2/PARV/Tp Inverse Cinematic/src/: IKn.cpp  nr.h  nrutil.cpp  nrutil.h  svdcmp.cpp
M2/PARV/Tp Robot/: CMakeLists.txt
M2/PARV/Tp Robot/include/Teclibs/src/: Tec3D.cpp  Tec3D.h  Tec3DObject.h  TecAlgorithm.h  TecFile.h  TecLibs.h  TecMath.h  TecNetwork.h  TecSystem.h  TextureCoord.h
M2/PARV/Tp Robot/include/Teclibs/src/3D/: .Matrix3x4.inl.swp  Basis3D.h  Basis3D.inl  Matrix3x3.h  Matrix3x3.inl  Matrix3x4.h  Matrix3x4.inl  Matrix4x4.h  Point3D.h  Point3D.inl  Quaternion.h  Quaternion.inl  Reference3D.h  Reference3D.inl  Vector3D.h  Vector3D.inl  Vector4D.h  Vector4D.inl
M2/PARV/Tp Robot/include/Teclibs/src/Math/: Defines.h  Float.h  Float.inl
M2/PARV/Tp Robot/include/Teclibs/src/Network/: UDP.cpp  UDP.h
M2/PARV/Tp Robot/include/Teclibs/src/Network/net/: Net.h  net.c  sockets.h
M2/PARV/Tp Robot/include/Teclibs/src/System/: Timer.cpp  Timer.h
M2/PARV/Tp Robot/src/: Bone.cpp  Bone.h  Cadeau.cpp  Cadeau.h  Forest.cpp  Forest.h  Ground.cpp  Ground.h  Mesh.h  Robot.cpp  Robot.h  Texture.cpp  Texture.h  main.cpp
M2/Projet/: CMakeLists.txt  Fractal.code-workspace  README.md
Modelisation Chateau Arcelot/: CHATEAU.INI  Centre.pov  Chateau.pov  Dependance.pov  Exterieur.pov  Mur.pov  Pont.pov  TexturePerso.pov
Stage/C++/: GraphXairC.pro  main.cpp
Stage/Python/: Main.py
Theme Rapport/: Arvirargus.otp
(+353 files in other folders)
